--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bean.picker.demo.beanpickerdemoapp">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_bean_picker"
         android:label="@string/app_name"
@@ -27,6 +28,9 @@
             android:theme="@style/AppTheme.Dark" />
         <activity
             android:name=".activity.UserAddActivity"
+            android:theme="@style/AppTheme.Dark" />
+        <activity
+            android:name=".activity.BottomNavigationActivity"
             android:theme="@style/AppTheme.Dark"></activity>
     </application>
 
